--- a/src/style.css
+++ b/src/style.css
@@ -17,3 +17,9 @@ a{
     cursor:pointer;
     color:black; 
 }
+
+input::-webkit-inner-spin-button, input::-webkit-outer-spin-button {
+    -webkit-appearance: none !important;
+    margin: 0 !important;
+    -moz-appearance:textfield !important;
+}
